# slack-job-monitor

./: .gitignore  README.md  pyproject.toml
src/slack_job_monitor/: __main__.py  slack_wrapper.py
